# cologne_phonetics

./: .pre-commit-config.yaml  .travis.yml  MANIFEST.in  Makefile  README.rst  cologne_phonetics.py  pyproject.toml  setup.py  test.py  test_cologne_phonetics.py
.github/workflows/: CI.yml  publish.yml
