[tool.poetry]
name = "cologne_phonetics"
version = "1.3.1"
description = "Python implementation of the cologne-phonetics algorithm"
authors = ["Janek Nouvertné"]
license = "MIT"
readme = "README.rst"
classifiers = [
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12"
]

[tool.poetry.dependencies]
python = ">=3.8"


[tool.poetry.group.dev.dependencies]
black = "^23.12.1"
mypy = "^1.8.0"


[tool.mypy]
strict = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
