[tool.poetry]
name = "cologne_phonetics"
version = "2.0.0"
description = "Python implementation of the cologne-phonetics algorithm"
authors = ["Janek Nouvertné"]
license = "MIT"
readme = "README.rst"
classifiers = [
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12"
]

[tool.poetry.dependencies]
python = ">=3.8"


[tool.poetry.group.dev.dependencies]
pre-commit = "<3.6.0"


[tool.mypy]
strict = true
exclude = ["test.py"]

[tool.ruff]
line-length = 88
indent-width = 4
target-version = "py38"
select = ["F", "E", "W", "I", "UP", "TCH", "FA"]
include = ["cologne_phonetics.py"]


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
